# digiOS

./: .gitignore  BOOTABLE_SYSTEM.md  BUILD_INSTRUCTIONS.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  FUNCTIONALITY_CHECKLIST.md  GITHUB_SETUP_INSTRUCTIONS.txt  INSTALL_BUILD_TOOLS.md  INSTALL_MSVC_TOOLS.ps1  INSTALL_OLLAMA.md  INTERACTION_SYSTEM.md  LICENSE  OS_STATUS.md  QUICKSTART.md  QUICK_INSTALL_OLLAMA.ps1  QUICK_START.ps1  README.md  RELATED_PROJECTS.md  SELF_IMPROVEMENT_STATUS.md  SETUP_GITHUB.md  SETUP_GNU_TOOLCHAIN.ps1  fix_model_config.ps1
.github/workflows/: ci.yml
scripts/: create_bootable.ps1  install_build_tools.ps1  setup_build_environment.ps1
src/: lib.rs  main.rs
src/action/: engine.rs  mod.rs
src/api/: mod.rs  server.rs
src/boot/: bootloader.rs  init.rs  mod.rs  setup.rs
src/core/: aios.rs  config.rs  mod.rs  paths.rs
src/event/: mod.rs  system.rs
src/human_interface/: mod.rs  terminal.rs  voice.rs  web.rs
src/interaction/: adapters.rs  manager.rs  mod.rs  tool_manager.rs
src/memory/: mod.rs  system.rs
src/model/: detector.rs  downloader.rs  huggingface.rs  lm_studio.rs  loader.rs  manager.rs  mod.rs  ollama.rs  python_ollama.rs  sources.rs
src/self_improve/: codegen.rs  engine.rs  evaluator.rs  mod.rs
src/state/: manager.rs  mod.rs
src/task/: mod.rs  planner.rs
src/vision/: mod.rs  system.rs
