[package]
name = "aios"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# System interaction
# Windows
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_NetworkManagement_IpHelper",
] }

# Cross-platform system
sysinfo = "0.30"
inputbot = "0.5"
enigo = "0.2"
clipboard = "0.5"

# Image processing
image = "0.24"
imageproc = "0.23"

# OCR (optional)
# tesseract-rs = "0.1"  # Uncomment if needed

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = "0.4"

# Utilities
uuid = { version = "1.6", features = ["v4"] }

# HTTP client for model downloads
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
